@@ -226,8 +226,8 @@ Add your credentials to the file *config/secrets.yml*:
 # if you're sharing your code publicly.
 
 development:
-  gmail_username: <%= ENV["GMAIL_USERNAME"] %>
-  gmail_password: <%= ENV["GMAIL_PASSWORD"] %>
+  email_provider_username: <%= ENV["GMAIL_USERNAME"] %>
+  email_provider_password: <%= ENV["GMAIL_PASSWORD"] %>
   mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
   mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
   domain_name: example.com
@@ -240,8 +240,8 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
-  gmail_username: <%= ENV["GMAIL_USERNAME"] %>
-  gmail_password: <%= ENV["GMAIL_PASSWORD"] %>
+  email_provider_username: <%= ENV["GMAIL_USERNAME"] %>
+  email_provider_password: <%= ENV["GMAIL_PASSWORD"] %>
   mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
   mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
   domain_name: <%= ENV["DOMAIN_NAME"] %>
@@ -249,7 +249,7 @@ production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
 </pre>
 
-All configuration values in the *config/secrets.yml* file are available anywhere in the application as variables. For example, @Rails.application.secrets.gmail_username@ will return the string set in the Unix environment variable @GMAIL_USERNAME@.
+All configuration values in the *config/secrets.yml* file are available anywhere in the application as variables. For example, @Rails.application.secrets.email_provider_username@ will return the string set in the Unix environment variable @GMAIL_USERNAME@.
 
 For the Gmail username and password, enter the credentials you use to log in to Gmail when you check your inbox. See the article "Send Email with Rails":http://railsapps.github.io/rails-send-email.html if you are using Google two factor authentication.
 
