@@ -12,7 +12,7 @@ class Contact < ActiveRecord::Base
   validates_length_of :content, :maximum => 500
 
   def update_spreadsheet
-    connection = GoogleDrive.login(Rails.application.secrets.gmail_username, Rails.application.secrets.gmail_password)
+    connection = GoogleDrive.login(Rails.application.secrets.email_provider_username, Rails.application.secrets.email_provider_password)
     ss = connection.spreadsheet_by_title('Learn-Rails-Example')
     if ss.nil?
       ss = connection.create_spreadsheet('Learn-Rails-Example')
