@@ -11,8 +11,8 @@
 # if you're sharing your code publicly.
 
 development:
-  gmail_username: <%= ENV["GMAIL_USERNAME"] %>
-  gmail_password: <%= ENV["GMAIL_PASSWORD"] %>
+  email_provider_username: <%= ENV["GMAIL_USERNAME"] %>
+  email_provider_password: <%= ENV["GMAIL_PASSWORD"] %>
   mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
   mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
   domain_name: example.com
@@ -25,8 +25,8 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
-  gmail_username: <%= ENV["GMAIL_USERNAME"] %>
-  gmail_password: <%= ENV["GMAIL_PASSWORD"] %>
+  email_provider_username: <%= ENV["GMAIL_USERNAME"] %>
+  email_provider_password: <%= ENV["GMAIL_PASSWORD"] %>
   mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
   mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
   domain_name: <%= ENV["DOMAIN_NAME"] %>
